fix: wrap 'you' tag to prevent overflow on mobile

--- a/src/components/Comment/CommentInfo.module.scss
+++ b/src/components/Comment/CommentInfo.module.scss
@@ -1,6 +1,9 @@
 @use "/src/scss/variables" as v;
 
 .comment-info {
+	overflow: hidden;
+	position: relative;
+
 	> .user-name {
 		color: v.$clr-text-neutral-500;
 		font-weight: 500;
@@ -11,12 +14,17 @@
 	}
 
 	> .current-user {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: center;
+		column-gap: 0.5em;
+		
 		&::after {
 			display: flex;
 			align-items: center;
 
 			content: "you";
-			margin-left: 0.5em;
 			padding: 0.5em;
 			height: 2.5ch;
 
